# VFS

./: .gitignore  UML.vsdx
A1/: A1.sln
A1/A1/: A1.vcxproj  A1.vcxproj.filters  Car.cpp  main.cpp
A1/Car/: Car.sln
AssetCreationTools/: Lana.0003.mb  Rigging.mb
AssetCreationTools/ACT-A1/: Chesty_chest.mb  Chesty_chestFinal.mba19480  Material Samples.mb
AssetCreationTools/Pictures/: smileface.psd  smileface_alpha.tga
DataStructures/ArrayList/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeMSVC2017Win64.bat  Lesson2List.sln  Lesson2List.vcxproj  Lesson2List.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  correct_output.txt
DataStructures/Lesson3_StackQueueDeque/: CMakeLists.txt  correct_output.txt
DataStructures/Lesson4_SortingAssignment/: .gitignore  CMakeLists.txt  CMakeMSVC2017.bat  correct_output.txt
DataStructures/Lesson4_SortingAssignment/src/adt/: list.h  queue.h  stack.h
DataStructures/Lesson4_SortingAssignment/src/ds/: arraylist.h  linkedlist.h  listdeque.h  listqueue.h
DataStructures/Lists/: Lists.sln
DataStructures/SortingAssignment/: SortingAssignment.sln
DigitalTheory/: Assign1Sample.docx  PG15_Teddy_A1.docx
MathPhysics/Barycentric/: Barycentric.sln
MathPhysics/CollisionDetection/: Collision.h  CollisionDetection.cpp  CollisionDetection.sln  CollisionDetection.vcxproj  Collision_Name.cpp
MathPhysics/DeterminantMatrix/: DeterminantMatrix.sln
OS/: UML.vsdx  readme.txt
Pipeline/: AutomatedBuildPipelines.vsdx  build.cmd
VS2019Themes/: Monokai.vssettings
(+851 files in other folders)
